Updated Getting Started (markdown)